--- a/config/config-sample.json
+++ b/config/config-sample.json
@@ -1,22 +1,22 @@
 {
     "development": {
-      "username": "postgres",
+      "username": "your_db_superuser",
       "password": null,
-      "database": "node_sequelize",
+      "database": "your_db_name",
       "host": "127.0.0.1",
       "dialect": "postgres"
     },
     "test": {
-      "username": "postgres",
+      "username": "your_db_superuser",
       "password": null,
-      "database": "node_sequelize",
+      "database": "your_db_name",
       "host": "127.0.0.1",
       "dialect": "postgres"
     },
     "production": {
-      "username": "postgres",
+      "username": "your_db_superuser",
       "password": null,
-      "database": "node_sequelize",
+      "database": "your_db_name",
       "host": "127.0.0.1",
       "dialect": "postgres"
     }
