--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/vue-fontawesome": "^3.0.2",
-    "@vue/apollo-option": "^4.0.0-alpha.20",
+    "@vue/apollo-composable": "^4.0.0-beta.1",
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
     "core-js": "^3.8.3",
